--- a/maTache.html
+++ b/maTache.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Css/ma tache.css">
     <title>Mon premier depot Githup</title>
 </head>
 <body>
